[package]
name = "bmo-to-md"
version = "0.1.0"
edition = "2024"
description = "Dump a bugzilla bug to markdown, with attachments unziped"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
url = "2.5"
indicatif = "0.17"
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
toml = "0.8"
dirs = "5.0"
zstd = "0.13"
base64 = "0.21"
